# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  check1  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py  even.py
brain_games/games/: calc.py  code.py  engine.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
