[tool.poetry]
name = "PoBidauGustang_brain_games"
version = "1.0.4"
description = "My first python project, 'Brain games'"
authors = ["Vlad Threee <threeeyesvl@gmail.com>"]
repository = "https://test.pypi.org/project/pobidaugustang-brain-games/"
classifiers=[
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
